--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="preload" as="fetch" href="/definitions/hash.json" crossorigin>
-    <link rel="preload" as="image" href="/images/chippy.png">
-    <link rel="icon" href="/images/chippy.png" />
-    <link rel="stylesheet" href="/dist/app.global.css" type="text/css" />
+    <link rel="preload" as="fetch" href="./definitions/hash.json" crossorigin>
+    <link rel="preload" as="image" href="./images/chippy.png">
+    <link rel="icon" href="./images/chippy.png" />
+    <link rel="stylesheet" href="./dist/app.global.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Your keyboard's best friend" />
     <meta data-react-helmet="true" property="og:image" content="https://usevia.app/images/chippy.png"><meta data-react-helmet="true" property="twitter:image" content="https://usevia.app/images/chippy.png"><meta data-react-helmet="true" http-equiv="x-ua-compatible" content="ie=edge"><meta data-react-helmet="true" property="og:title" content="VIA"><meta data-react-helmet="true" name="description" content="Your keyboard&#x27;s best friend"><meta data-react-helmet="true" property="og:description" content="Your keyboard&#x27;s best friend"><meta data-react-helmet="true" name="twitter:card" content="summary">
@@ -14,7 +14,7 @@
   <body>
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="/dist/index.js"></script>
+    <script type="module" src="./dist/index.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
